# oxygen-launcher

./: .gitignore  README.md  README_zh.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/: .clangd  build.gradle.kts  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/oxygen/launcher/: MainActivity.kt
android/src/main/res/values/: strings.xml  styles.xml
android/src/main/res/values-v21/: styles.xml
android/src/main/res/values-zh/: strings.xml
core/: build.gradle.kts
core/src/androidMain/jni/: CMakeLists.txt  callback_manager.hpp  jre_launcher.cpp  log.cpp  log.hpp  object_manager.hpp  oxygen.h  oxygen_bridge.cpp  oxygen_callback.cpp  oxygen_func.cpp  oxygen_func.hpp  oxygen_loader.cpp
core/src/androidMain/kotlin/oxygen/: AndroidCore.kt
core/src/androidMain/kotlin/oxygen/input/: AndroidInput.kt  Packer.kt
core/src/androidMain/kotlin/oxygen/launcher/: AndroidActivity.kt
core/src/androidMain/kotlin/oxygen/surfaceview/: RenderSurfaceView.kt  ResolutionStrategy.kt
core/src/androidMain/kotlin/oxygen/util/: AndroidFiles.kt  OS.kt
core/src/commonMain/kotlin/oxygen/: Core.kt  Settings.kt
core/src/commonMain/kotlin/oxygen/bridge/: OxygenBridge.kt
core/src/commonMain/kotlin/oxygen/input/: Input.kt
core/src/commonMain/kotlin/oxygen/launcher/: JreManager.kt  JvmLauncher.kt  Launcher.kt
core/src/commonMain/kotlin/oxygen/util/: CrashHandler.kt  Files.kt  Keep.kt  Log.kt  OLPath.kt  OS.kt  PlaceholderResolver.kt  Platform.kt  Streams.kt
gradle/: libs.versions.toml
(+1 files in other folders)
